--- a/images/x86_64/WindowsServer_2016/shippable.yml
+++ b/images/x86_64/WindowsServer_2016/shippable.yml
@@ -459,7 +459,7 @@ jobs:
       script:
         - cat output.txt
 
-  - name: w2k16_x86_64_gcp_img_final
+  - name: final_w2k16_x8664_gce_img
     type: runSh
     triggerMode: parallel
     dependencyMode: strict
@@ -468,12 +468,10 @@ jobs:
       - IN: w2k16dotnetcore_x8664_tag
       - IN: w2k16aspnetcore_x8664_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_file_tag
+      - IN: reqKick_repo_file_tag
       - IN: w2k16reqProc_dd_tag
-      - IN: c7repLib_x8664_tag
-      - IN: u14repLib_x8664_tag
-      - IN: u16repLib_x8664_tag
-      - IN: u16repLib_aarch64_tag
+      - IN: w2k16reqProc_dd_img
+        switch: off
       - IN: buildami_repo
         switch: off
       - IN: patch_w2k16_x8664_gce_img
@@ -519,22 +517,18 @@ jobs:
     dependencyMode: strict
     triggerMode: parallel
     steps:
-      - IN: execTemplates_repo_file_tag
       - IN: node_repo_file_tag
-      - IN: cexec_repo_file_tag
-      - IN: reqExec_repo_tag
-      - IN: reqProc_repo_tag
-      - IN: c7repLib_x8664_tag
-      - IN: u14repLib_x8664_tag
-      - IN: u16repLib_x8664_tag
-      - IN: u16repLib_aarch64_tag
+      - IN: reqKick_repo_file_tag
+      - IN: w2k16reqProc_dd_tag
+      - IN: w2k16reqProc_dd_img
+        switch: off
       - IN: buildami_repo
         switch: off
       - IN: prod_release
         switch: off
       - IN: ship_bits_gcp
         switch: off
-      - IN: w2k16_x86_64_gcp_img_final
+      - IN: final_w2k16_x8664_gce_img
         switch: off
       - TASK:
           name: v634_w2k16_gce_image
@@ -550,7 +544,7 @@ jobs:
                 - IMG_VER: "v6.3.4"
           script:
             - pushd $(shipctl get_resource_state "buildami_repo")/gcp/x86_64/WindowsServer_2016/final
-            - shipctl copy_file_from_resource_state "w2k16_x86_64_gcp_img_final" "images.txt" .
+            - shipctl copy_file_from_resource_state "final_w2k16_x8664_gce_img" "images.txt" .
             - export REL_VER=$(shipctl get_resource_version_name "prod_release")
             - export IMG_VER_DASH=${IMG_VER//./-}
             - export FAM_NAME=$IMG_VER_DASH"-final-w2k16-x86-64"
@@ -565,6 +559,8 @@ jobs:
     on_failure:
       script:
         - cat output.txt
+
+### AWS
 
   - name: windowsbaseami_prep
     type: runSh
