--- a/images/x86_64/WindowsServer_2016/shippable.yml
+++ b/images/x86_64/WindowsServer_2016/shippable.yml
@@ -485,6 +485,11 @@ jobs:
           runtime:
             options:
               env:
+                - BASE_IMG_RES: "patch_w2k16_x8664_gce_img"
+                - NODE_RES: "node_repo_file_tag"
+                - REQPROC_RES: "u16reqProc_dd_tag"
+                - REQPROC_IMG_RES: "u16reqProc_dd_img"
+                - REQKICK_RES: "reqKick_repo_file_tag"
                 - MACHINE_TYPE: "n1-standard-8"
                 - REGION: "us-east1"
                 - ZONE: "us-east1-b"
@@ -492,27 +497,48 @@ jobs:
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - WINRM_USERNAME: "packer_user"
           script:
-            - pushd $(shipctl get_resource_state "buildami_repo")/gcp/x86_64/WindowsServer_2016/final
-            - shipctl copy_file_from_resource_state "patch_w2k16_x8664_gce_img" "images.txt" .
-            - export REL_VER=$(shipctl get_resource_version_key "prod_release" versionName)
-            - export REL_VER_DASH=${REL_VER//./-}
-            - export IMG_VER=$REL_VER
-            - export FAM_NAME=$REL_VER_DASH"-final-w2k16-x86-64"
-            - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key patch_w2k16_x8664_gce_img IMAGE_FAM_NAME)
-            - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
-            - shipctl replace vars.json
-            - packer validate -var-file=vars.json packer.json
-            - packer build -machine-readable -var-file=vars.json packer.json 2>&1 | tee output.txt
+            - |
+               export REL_VER=$(shipctl get_resource_version_name "prod_release")
+               export IMG_VER=$REL_VER
+               export REL_VER_DASH=${REL_VER//./-}
+               export FAM_NAME=$REL_VER_DASH"-final-w2k16-x86-64"
+            - |
+               export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "BASE_IMG_RES" "IMAGE_FAM_NAME")
+               export ARCHITECTURE=$(shipctl get_resource_version_key "BASE_IMG_RES" "ARCHITECTURE")
+               export OS=$(shipctl get_resource_version_key "BASE_IMG_RES" "OS")
+               export DOCKER_VER=$(shipctl get_resource_version_key "BASE_IMG_RES" "DOCKER_VER")
+            - |
+               REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
+               REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
+               export REQPROC_IMAGE="$REQPROC_REG:$REQPROC_TAG"
+            - |
+               NODE_ZIP_FILENAME=$(shipctl get_resource_version_key "$NODE_RES" "ZIP_FILENAME")
+               NODE_WEB_URL=$(shipctl get_resource_version_key "$NODE_RES" "WEB_URL")
+               export NODE_DOWNLOAD_URL="$NODE_WEB_URL/$NODE_ZIP_FILENAME"
+            - |
+               KICK_ZIP_FILENAME=$(shipctl get_resource_version_key "$REQKICK_RES" "ZIP_FILENAME")
+               KICK_WEB_URL=$(shipctl get_resource_version_key "$REQKICK_RES" "WEB_URL")
+               export REQKICK_DOWNLOAD_URL="$KICK_WEB_URL/$KICK_ZIP_FILENAME"
+            - |
+               pushd $(shipctl get_resource_state "buildami_repo")/gcp/$ARCHITECTURE/$OS/final
+               cp -R ../../../templates/win/* .
+               shipctl copy_file_from_resource_state "$BASE_IMG_RES" "images.txt" .
+               echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
+               shipctl replace vars.json
+               packer validate -var-file=vars.json packer.json
+               packer build -machine-readable -var-file=vars.json packer.json 2>&1 | tee output.txt
             - export IMAGE_NAME=$(cat output.txt | awk -F, '$0 ~/artifact,0,id/ {print $6}' | cut -d':' -f 2)
     on_success:
       script:
         - shipctl put_resource_state_multi $JOB_NAME "versionName=$IMAGE_NAME" "IMAGE_NAME=$IMAGE_NAME" "IMAGE_FAM_NAME=$FAM_NAME" "REL_VER=$REL_VER" "IMG_VER=$IMG_VER"
+        - shipctl put_resource_state_multi $JOB_NAME "ARCHITECTURE=$ARCHITECTURE" "OS=$OS" "DOCKER_VER=$DOCKER_VER" "REQPROC_REG=$REQPROC_REG"
+        - shipctl put_resource_state_multi $JOB_NAME "REQKICK_TAR_FILENAME=$KICK_TAR_FILENAME" "REQKICK_WEB_URL=$KICK_WEB_URL" "NODE_TAR_FILENAME=$NODE_TAR_FILENAME" "NODE_WEB_URL=$NODE_WEB_URL"
         - shipctl copy_file_to_state images.txt
     on_failure:
       script:
         - cat output.txt
 
-  - name: w2k16_x86_64_gcp_img_v634
+  - name: v634_w2k16_x8664_gce_img
     type: runSh
     dependencyMode: strict
     triggerMode: parallel
@@ -531,10 +557,15 @@ jobs:
       - IN: final_w2k16_x8664_gce_img
         switch: off
       - TASK:
-          name: v634_w2k16_gce_image
+          name: build_gce_image
           runtime:
             options:
               env:
+                - BASE_IMG_RES: "patch_w2k16_x8664_gce_img"
+                - NODE_RES: "node_repo_file_tag"
+                - REQPROC_RES: "u16reqProc_dd_tag"
+                - REQPROC_IMG_RES: "u16reqProc_dd_img"
+                - REQKICK_RES: "reqKick_repo_file_tag"
                 - MACHINE_TYPE: "n1-standard-8"
                 - REGION: "us-east1"
                 - ZONE: "us-east1-b"
@@ -543,19 +574,42 @@ jobs:
                 - WINRM_USERNAME: "packer_user"
                 - IMG_VER: "v6.3.4"
           script:
-            - pushd $(shipctl get_resource_state "buildami_repo")/gcp/x86_64/WindowsServer_2016/final
-            - shipctl copy_file_from_resource_state "final_w2k16_x8664_gce_img" "images.txt" .
-            - export REL_VER=$(shipctl get_resource_version_name "prod_release")
-            - export IMG_VER_DASH=${IMG_VER//./-}
-            - export FAM_NAME=$IMG_VER_DASH"-final-w2k16-x86-64"
-            - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
-            - shipctl replace vars.json
-            - packer validate -var-file=vars.json packer.json
-            - packer build -machine-readable -var-file=vars.json packer.json 2>&1 | tee output.txt
+            - |
+               export REL_VER=$(shipctl get_resource_version_name "prod_release")
+               export IMG_VER_DASH=${IMG_VER//./-}
+               export FAM_NAME=$IMG_VER_DASH"-final-u16-x86-64"
+               export SOURCE_IMAGE_FAMILY=$FAM_NAME
+            - |
+               export ARCHITECTURE=$(shipctl get_resource_version_key "BASE_IMG_RES" "ARCHITECTURE")
+               export OS=$(shipctl get_resource_version_key "BASE_IMG_RES" "OS")
+               export DOCKER_VER=$(shipctl get_resource_version_key "BASE_IMG_RES" "DOCKER_VER")
+            - |
+               REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
+               REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
+               export REQPROC_IMAGE="$REQPROC_REG:$REQPROC_TAG"
+            - |
+               NODE_ZIP_FILENAME=$(shipctl get_resource_version_key "$NODE_RES" "ZIP_FILENAME")
+               NODE_WEB_URL=$(shipctl get_resource_version_key "$NODE_RES" "WEB_URL")
+               export NODE_DOWNLOAD_URL="$NODE_WEB_URL/$NODE_ZIP_FILENAME"
+            - |
+               KICK_ZIP_FILENAME=$(shipctl get_resource_version_key "$REQKICK_RES" "ZIP_FILENAME")
+               KICK_WEB_URL=$(shipctl get_resource_version_key "$REQKICK_RES" "WEB_URL")
+               export REQKICK_DOWNLOAD_URL="$KICK_WEB_URL/$KICK_ZIP_FILENAME"
+            - |
+               pushd $(shipctl get_resource_state "buildami_repo")/gcp/$ARCHITECTURE/$OS/final
+               cp -R ../../../templates/win/* .
+               shipctl copy_file_from_resource_state "$BASE_IMG_RES" "images.txt" .
+               echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
+               shipctl replace vars.json
+               packer validate -var-file=vars.json packer.json
+               packer build -machine-readable -var-file=vars.json packer.json 2>&1 | tee output.txt
             - export IMAGE_NAME=$(cat output.txt | awk -F, '$0 ~/artifact,0,id/ {print $6}' | cut -d':' -f 2)
     on_success:
       script:
         - shipctl put_resource_state_multi $JOB_NAME "versionName=$IMAGE_NAME" "IMAGE_NAME=$IMAGE_NAME" "IMAGE_FAM_NAME=$FAM_NAME" "REL_VER=$REL_VER" "IMG_VER=$IMG_VER"
+        - shipctl put_resource_state_multi $JOB_NAME "ARCHITECTURE=$ARCHITECTURE" "OS=$OS" "DOCKER_VER=$DOCKER_VER" "REQPROC_REG=$REQPROC_REG"
+        - shipctl put_resource_state_multi $JOB_NAME "REQKICK_TAR_FILENAME=$KICK_TAR_FILENAME" "REQKICK_WEB_URL=$KICK_WEB_URL" "NODE_TAR_FILENAME=$NODE_TAR_FILENAME" "NODE_WEB_URL=$NODE_WEB_URL"
+        - shipctl copy_file_to_state images.txt
     on_failure:
       script:
         - cat output.txt
