adding pipefail for bash options

--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -697,6 +697,7 @@ jobs:
                 - OS: "CentOS_7"
                 - DOCKER_VER: "17.06"
           script:
+            - set -o pipefail
             - |
                export IMG_VER=$REL_VER
                export REL_VER_DASH=${REL_VER//./-}
@@ -753,6 +754,7 @@ jobs:
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - SSH_USER: "centos"
           script:
+            - set -o pipefail
             - |
                REL_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "REL_VER")
                export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
@@ -842,6 +844,7 @@ jobs:
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - SSH_USER: "centos"
           script:
+            - set -o pipefail
             - |
                export REL_VER=$(shipctl get_resource_version_name "prod_release")
                export IMG_VER=$REL_VER
@@ -932,6 +935,7 @@ jobs:
                 - SSH_USER: "centos"
                 - IMG_VER: "v6.3.4"
           script:
+            - set -o pipefail
             - |
                export REL_VER=$(shipctl get_resource_version_name "prod_release")
                export IMG_VER_DASH=${IMG_VER//./-}
