--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -1364,6 +1364,7 @@ jobs:
                 - OS: "Ubuntu_14.04"
                 - DOCKER_VER: "17.06"
           script:
+            - set -o pipefail
             - |
                export IMG_VER=$REL_VER
                export REL_VER_DASH=${REL_VER//./-}
@@ -1420,6 +1421,7 @@ jobs:
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - SSH_USER: "root"
           script:
+            - set -o pipefail
             - |
                REL_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "REL_VER")
                export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
@@ -1527,6 +1529,7 @@ jobs:
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - SSH_USER: "root"
           script:
+            - set -o pipefail
             - |
                export REL_VER=$(shipctl get_resource_version_name "prod_release")
                export IMG_VER=$REL_VER
@@ -1617,6 +1620,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.3.2"
           script:
+            - set -o pipefail
             - |
                export REL_VER=$(shipctl get_resource_version_name "prod_release")
                export IMG_VER_DASH=${IMG_VER//./-}
@@ -1706,6 +1710,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.4.1"
           script:
+            - set -o pipefail
             - |
                export REL_VER=$(shipctl get_resource_version_name "prod_release")
                export IMG_VER_DASH=${IMG_VER//./-}
@@ -1795,6 +1800,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.5.1"
           script:
+            - set -o pipefail
             - |
                export REL_VER=$(shipctl get_resource_version_name "prod_release")
                export IMG_VER_DASH=${IMG_VER//./-}
@@ -1884,6 +1890,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.6.1"
           script:
+            - set -o pipefail
             - |
                export REL_VER=$(shipctl get_resource_version_name "prod_release")
                export IMG_VER_DASH=${IMG_VER//./-}
@@ -1973,6 +1980,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.7.3"
           script:
+            - set -o pipefail
             - |
                export REL_VER=$(shipctl get_resource_version_name "prod_release")
                export IMG_VER_DASH=${IMG_VER//./-}
@@ -2062,6 +2070,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.8.2"
           script:
+            - set -o pipefail
             - |
                export REL_VER=$(shipctl get_resource_version_name "prod_release")
                export IMG_VER_DASH=${IMG_VER//./-}
@@ -2151,6 +2160,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.10.4"
           script:
+            - set -o pipefail
             - |
                export REL_VER=$(shipctl get_resource_version_name "prod_release")
                export IMG_VER_DASH=${IMG_VER//./-}
@@ -2240,6 +2250,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.1.4"
           script:
+            - set -o pipefail
             - |
                export REL_VER=$(shipctl get_resource_version_name "prod_release")
                export IMG_VER_DASH=${IMG_VER//./-}
@@ -2329,6 +2340,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.2.4"
           script:
+            - set -o pipefail
             - |
                export REL_VER=$(shipctl get_resource_version_name "prod_release")
                export IMG_VER_DASH=${IMG_VER//./-}
@@ -2418,6 +2430,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.3.4"
           script:
+            - set -o pipefail
             - |
                export REL_VER=$(shipctl get_resource_version_name "prod_release")
                export IMG_VER_DASH=${IMG_VER//./-}
