--- a/images/x86_64/WindowsServer_2016/shippable.yml
+++ b/images/x86_64/WindowsServer_2016/shippable.yml
@@ -370,6 +370,7 @@ jobs:
                 - OS: "WindowsServer_2016"
                 - DOCKER_VER: "17.06"
           script:
+            - set -o pipefail
             - |
                export IMG_VER=$REL_VER
                export REL_VER_DASH=${REL_VER//./-}
@@ -422,6 +423,7 @@ jobs:
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - WINRM_USERNAME: "packer_user"
           script:
+            - set -o pipefail
             - |
                REL_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "REL_VER")
                export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
@@ -497,6 +499,7 @@ jobs:
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - WINRM_USERNAME: "packer_user"
           script:
+            - set -o pipefail
             - |
                export REL_VER=$(shipctl get_resource_version_name "prod_release")
                export IMG_VER=$REL_VER
@@ -574,6 +577,7 @@ jobs:
                 - WINRM_USERNAME: "packer_user"
                 - IMG_VER: "v6.3.4"
           script:
+            - set -o pipefail
             - |
                export REL_VER=$(shipctl get_resource_version_name "prod_release")
                export IMG_VER_DASH=${IMG_VER//./-}
