--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -1368,7 +1368,8 @@ jobs:
             - |
                export IMG_VER=$REL_VER
                export REL_VER_DASH=${REL_VER//./-}
-               export FAM_NAME=$REL_VER_DASH"-prep-u14-x86-64"
+               DOC_VER_DASH=${DOCKER_VER//./-}
+               export FAM_NAME="$DOC_VER_DASH-$REL_VER_DASH-prep-u14-x86-64"
             - |
                TAR_FILENAME=$(shipctl get_resource_version_key "$NODE_RES" "TAR_FILENAME")
                WEB_URL=$(shipctl get_resource_version_key "$NODE_RES" "WEB_URL")
@@ -1431,7 +1432,8 @@ jobs:
                export NODE_WEB_URL=$(shipctl get_resource_version_key "$BASE_IMG_RES" "NODE_WEB_URL")
                export NODE_TAR_FILENAME=$(shipctl get_resource_version_key "$BASE_IMG_RES" "NODE_TAR_FILENAME")
                export REL_VER_DASH=${REL_VER//./-}
-               export FAM_NAME=$REL_VER_DASH"-patch-u14-x86-64"
+               DOC_VER_DASH=${DOCKER_VER//./-}
+               export FAM_NAME="$DOC_VER_DASH-$REL_VER_DASH-patch-u14-x86-64"
             - |
                REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_RES" "sourceName")
                REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
