--- a/images/x86_64/Ubuntu_16.04/shippable.yml
+++ b/images/x86_64/Ubuntu_16.04/shippable.yml
@@ -1409,7 +1409,7 @@ jobs:
             - |
                REP_TAR_FILENAME=$(shipctl get_resource_version_key "$REPORTS_RES" "TAR_FILENAME")
                REP_WEB_URL=$(shipctl get_resource_version_key "$REPORTS_RES" "WEB_URL")
-               export REPORTS_DOWNLOAD_URL="$REP_WEB_URL/$REP_TAR_FILENAME"
+               export REPORTS_DOWNLOAD_URL="$REP_WEB_URL/$REL_VER/$REP_TAR_FILENAME"
             - |
                KICK_TAR_FILENAME=$(shipctl get_resource_version_key "$REQKICK_RES" "TAR_FILENAME")
                KICK_WEB_URL=$(shipctl get_resource_version_key "$REQKICK_RES" "WEB_URL")
@@ -1511,7 +1511,7 @@ jobs:
             - |
                REP_TAR_FILENAME=$(shipctl get_resource_version_key "$REPORTS_RES" "TAR_FILENAME")
                REP_WEB_URL=$(shipctl get_resource_version_key "$REPORTS_RES" "WEB_URL")
-               export REPORTS_DOWNLOAD_URL="$REP_WEB_URL/$REP_TAR_FILENAME"
+               export REPORTS_DOWNLOAD_URL="$REP_WEB_URL/$REL_VER/$REP_TAR_FILENAME"
             - |
                KICK_TAR_FILENAME=$(shipctl get_resource_version_key "$REQKICK_RES" "TAR_FILENAME")
                KICK_WEB_URL=$(shipctl get_resource_version_key "$REQKICK_RES" "WEB_URL")
@@ -1601,7 +1601,7 @@ jobs:
             - |
                REP_TAR_FILENAME=$(shipctl get_resource_version_key "$REPORTS_RES" "TAR_FILENAME")
                REP_WEB_URL=$(shipctl get_resource_version_key "$REPORTS_RES" "WEB_URL")
-               export REPORTS_DOWNLOAD_URL="$REP_WEB_URL/$REP_TAR_FILENAME"
+               export REPORTS_DOWNLOAD_URL="$REP_WEB_URL/$REL_VER/$REP_TAR_FILENAME"
             - |
                KICK_TAR_FILENAME=$(shipctl get_resource_version_key "$REQKICK_RES" "TAR_FILENAME")
                KICK_WEB_URL=$(shipctl get_resource_version_key "$REQKICK_RES" "WEB_URL")
